# vulnman-nuclei-orchestrator

./: .env.template  .gitignore  Dockerfile  LICENCE  README.md  pyproject.toml
.github/workflows/: docker-image.yml
configs/: adhoc-config.toml  adhoc-nuclei.yml  latest-config.toml  latest-nuclei.yml  reporting_config.yml  scheduled-config.toml  scheduled-nuclei.yml  testing-config.toml  testing-nuclei.yml
nuclei_scan_runner/: __main__.py  cli.py  lib.py  log.py  runner.py
nuclei_scan_runner/afterscan/: lib.py  script_constants.py
nuclei_scan_runner/afterscan/database/: __init__.py
nuclei_scan_runner/afterscan/templates/: __init__.py  templates.py
nuclei_scan_runner/vulnerability-templates/: README.md  default.jinja  ftpAnonymousLogin.md.jinja  gitConfig.md.jinja  phpinfo.md.jinja  regex.txt  xss.jinja
tests/: Makefile  README.md  test_templates.py
tests/configs/: adhoc-nuclei.yml  testing-config.toml
tests/nuclei_scan_runner/: log.py  runner.py
tests/nuclei_scan_runner/afterscan/: finding_processor.py  lib.py  models.py
tests/nuclei_scan_runner/afterscan/database/: models.py
tests/nuclei_scan_runner/vulnerability-templates/: csrf.md.jinja  openRedirect.md.jinja  sqli.md.jinja
tests/test_data/: finding-xss.json  finding-xss.json.txt
