[tool.poetry]
name = "nuclei_scan_runner"
version = "0.1.0"
description = "Nuclei scan orchestration tool"
authors = ["Matej Smycka <scanning@csirt.muni.cz>, Adam Chovanec <scanning@csirt.muni.cz>"]
readme = "README.md"
packages = [
  { include = "nuclei_scan_runner" },
]

[tool.poetry.scripts]
nuclei-scan-runner = "nuclei_scan_runner.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
toml = "^0.10.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
python-gitlab = "^4.4.0"
jinja2 = "^3.1.3"
pytz = "^2024.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
ruff = "^0.8.0"
deptry = "^0.12.0"
pre-commit = "^3.6.0"
types-toml = "^0.10.8.20240310"
types-psycopg2 = "^2.9.21.20240311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
console_output_style = "progress"
testpaths = ['tests']
addopts = "-ra -q"

[tool.ruff]
line-length = 120
lint.select = [
  "ALL"
]
lint.ignore = [
  "D",  # Docstring
  "G",  # flake8-logging-format
  "ANN", # flake8-annotations
  "TRY", # tryceratops
  "PLR0913", # too many arguments
  "S101" ,  # Use of assert detected
  "PTH123",  # Use of open
  "FBT001",  # Use of built-in type
  "S311",  # Standard pseudo-random generators are not suitable for security/cryptographic purposes
  "PLW2901", # override for loop variable
  "PERF203", # performance issue
  "A004", # exit function
  "S603", # subprocess warning
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["nuclei_scan_runner"]

[tool.mypy]
files = ["."]
